WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32000
Crash in Safari caused by extreme column-gap and column-width values
https://bugs.webkit.org/show_bug.cgi?id=32000
Summary
Crash in Safari caused by extreme column-gap and column-width values
Beth Dakin
Reported
2009-11-30 15:23:30 PST
Crashes in RenderBlock::calcColumnWidth(). Patch and test forthcoming. <
rdar://problem/7425433
>
Attachments
Patch
(3.82 KB, patch)
2009-11-30 15:43 PST
,
Beth Dakin
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2009-11-30 15:43:59 PST
Created
attachment 44044
[details]
Patch
Oliver Hunt
Comment 2
2009-11-30 15:46:57 PST
Comment on
attachment 44044
[details]
Patch r=me
WebKit Review Bot
Comment 3
2009-11-30 15:47:12 PST
style-queue ran check-webkit-style on
attachment 44044
[details]
without any errors.
Beth Dakin
Comment 4
2009-11-30 15:56:24 PST
Fixed with
r51517
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug