WebCore: Fix for https://bugs.webkit.org/show_bug.cgi?id=32000 Crash in Safari caused by extreme column-gap and column-width values -and corresponding- <rdar://problem/7425433>

Reviewed by Oliver Hunt.

Prevent desiredColumnCount from being less than 1 since it is used
as a divisor.
* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::calcColumnWidth):

LayoutTests: Test for https://bugs.webkit.org/show_bug.cgi?id=32000 Crash in
Safari caused by extreme column-gap and column-width values
-and corresponding-
<rdar://problem/7425433>

Reviewed by Oliver Hunt.

* fast/multicol/huge-column-gap-crash-expected.txt: Added.
* fast/multicol/huge-column-gap-crash.html: Added.



Canonical link: https://commits.webkit.org/42944@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51517 268f45cc-cd09-0410-ab3c-d52691b4dbfc